# CarCost

./: .gitignore  README.md  start_dev.sh
backend/: README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5180e27a91cf_create_users_table.py  ce89955bf56f_create_cars_table.py  d78017c30ce8_create_fuel_receipts_table.py
backend/app/: main.py
backend/app/api/: auth.py  cars.py  deps.py  fuel_receipts.py  health.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/models/: car.py  cars.py  fuel_receipt.py  schemas.py  user.py
backend/app/schemas/: request_schemas.py  response_schemas.py
backend/myproject/: settings.py
frontend/: eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/account-sheet/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: app-sidebar.tsx  auth-guard.tsx  authenticated-layout.tsx  car-selector.tsx  car-specific-chart.tsx  car-specific-stats.tsx  connection-status.tsx  export-dialog.tsx  fuel-chart.tsx  receipt-form.tsx  stats-cards.tsx
frontend/components/settings/: add-car-dialog.tsx  car-settings.tsx  edit-car-dialog.tsx  preferences-settings.tsx  profile-settings.tsx  security-settings.tsx
frontend/contexts/: auth-context.tsx
frontend/lib/: api.ts  auth.ts  types.ts
frontend/src/: App.tsx
machine_learning/ml_training/: receipt_ocr_processing_script.py
(+3 files in other folders)
